--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <p class="p-text">Address Book</p>
+            <h2 class="h-text">Address Book</h2>
+            <p class="p-text">Keeping track of your contacts have never been so easy</p>
         </div>
     </div>
 
